# yb

./: .code-workspace  .code-workspace.license  .env  .gitignore  .gitmodules  DESIGN.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MIT.txt  MULTI_DEVICE.md  PIN_PROTECTED_MODE.md  README.md  REUSE.toml  TODO.md  USER_GUIDE.md  debug_pin_protected.py  default.nix  instructions.md  pyproject.toml  shell-editable.nix  shell.nix  yb.1  yb.1.license
.github/workflows/: deploy.yaml  nix.yaml
attic/: prompt
attic/demo/: 3-min-demo.bash  test-heredoc.bash
attic/mock_up/: README.md  flash_test.rs  test_bridge_ykman_to_reader.py  test_final_flash.py  ykman_working_mockup.py
demo/: 3-min-demo.bash  demo-script.bash  test-enter-hook.bash  test-heredoc.bash  test-multiline.bash
doc/: DESIGN.md  IMPLEMENTATION_SUMMARY.md  NIXPKGS_SUBMISSION.md  PIN.md  PIN_PROTECTED_MODE.md  REVIEW.md  USER_GUIDE.md  deck.xml  package.nix
docs/: YBLOB_FORMAT.md  code-review-2026-03.md  rust-port-plan.md  sec-review.md  test-harness.md  yubikey-apdu-reference.md  yubikey-nvm-internals.md  yubikey-rust-libs.md
docs/specs/: 0000-template.md  0001-rust-port.md  0002-crate-structure.md  0003-implementation-plan.md  0004-tier2-hardware-piv-tests.md  0005-nix-integration-test-build.md  0006-security-hardening.md  0007-cli-improvements.md  0008-cli-tests.md  0009-cli-subprocess-tests.md  0010-dynamic-object-sizing.md  0011-refactor-and-test-coverage.md  0012-transparent-compression.md  0013-interactive-device-selection.md  0014-operation-generator.md  0015-self-test-command.md  0016-pre-allocated-tiered-store.md  0017-blob-integrity-signature.md  0018-ls-integrity-signals.md  0019-macos-support.md
mirror/: README-Apache2.md  README-CC0.md
mock_up/: ANSWERS_TO_QUESTIONS.md  README.md  YKMAN_API_FINDINGS.md  blink_yubikey.py  debug_pin_protected.py  diagnose_fido_access.py  investigate_usb_mapping.py  test_bridge_ykman_to_reader.py  test_fido2_touch.py  test_final_flash.py  test_flash_debug.py  test_led_blink.py  test_led_flash.py  test_pin_protected_mode.py  test_selector_flash.py  test_subprocess_tty.py  verify_connectivity.py  ykman_working_mockup.py  yubikey_selector.py
nixpkgs/: discourse-post.md  package.nix  package.nix.license  pr-description.md  review-response.md  tests.nix
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/docs/: DESIGN.md  code-review.md  yubikey-apdu-reference.md
rust/yb/: Cargo.toml
rust/yb-core/: Cargo.toml
rust/yb-core/src/: auxiliaries.rs  context.rs  crypto.rs  lib.rs  nvm.rs  orchestrator.rs  test_utils.rs
rust/yb-core/src/orchestrator/: compression.rs  mod.rs  signature.rs  types.rs
rust/yb-core/src/piv/: emulated.rs  hardware.rs  mod.rs  session.rs  tlv.rs  virtual_piv.rs
rust/yb-core/src/piv/session/: auth.rs  crypto.rs  info.rs  mod.rs  objects.rs  transport.rs
rust/yb-core/src/store/: constants.rs  mod.rs  tests.rs
rust/yb-core/tests/: virtual_piv_tests.rs
rust/yb-core/tests/fixtures/: default.yaml  with_key.yaml
rust/yb-piv-harness/: Cargo.toml
rust/yb-piv-harness/src/: lib.rs
rust/yb-piv-harness/tests/: hardware_piv_tests.rs  yb_cli_tests.rs
rust/yb/src/: auxiliaries.rs  complete.rs  gen_man.rs  lib.rs  main.rs  orchestrator.rs
rust/yb/src/cli/: fetch.rs  format.rs  fsck.rs  list.rs  list_readers.rs  mod.rs  picker.rs  remove.rs  select.rs  self_test.rs  store.rs  util.rs
rust/yb/src/piv/: emulated.rs  hardware.rs
rust/yb/src/store/: constants.rs
rust/yb/tests/: cli_tests.rs
src/yb/: auxiliaries.py  cli_fetch.py  cli_format.py  cli_fsck.py  cli_list.py  cli_list_readers.py  cli_remove.py  cli_self_test.py  cli_store.py  constants.py  crypto.py  main.py  orchestrator.py  parse_int.py  piv.py  self_test.py  store.py  test_helpers.py  x509_subject.py  yubikey_selector.py
stash/: .gitignore
tests/: .gitignore  test_pin_protected_mode.py  test_store.py  test_store_comprehensive.py
website/: config.toml
website/content/: _index.md  _index.md.license
website/templates/: index.html  macros.html  page.html  section.html
