# SPDX-FileCopyrightText: 2025 - 2026 Frederic Ruget <fred@atlant.is> (GitHub: @douzebis)
#
# SPDX-License-Identifier: MIT

[package]
name        = "yb"
version     = "0.2.0"
edition     = "2021"
license     = "MIT"
description = "Secure blob storage on a YubiKey"
repository  = "https://github.com/douzebis/yb"
homepage    = "https://github.com/douzebis/yb"
readme      = "../../README.md"
keywords    = ["yubikey", "piv", "encryption", "security"]
categories  = ["command-line-utilities", "cryptography"]

[[bin]]
name = "yb"
path = "src/main.rs"

[lib]
name = "yb"
path = "src/lib.rs"

[features]
self-test = ["yb-core/test-utils"]

[dependencies]
yb-core       = { path = "../yb-core", version = "0.2.0", features = ["chrono", "virtual-piv"] }
clap          = { version = "4", features = ["derive", "env"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
crossterm     = "0.27"
anyhow        = "1"
chrono        = "0.4"
globset       = "0.4"
tempfile      = "3"
rpassword     = "7"
atty          = "0.2"
[dev-dependencies]
yb-core  = { path = "../yb-core", version = "0.2.0", features = ["chrono", "virtual-piv"] }
tempfile = "3"
