# SPDX-FileCopyrightText: 2025 - 2026 Frederic Ruget <fred@atlant.is> <fred@s3ns.io> (GitHub: @douzebis)
# SPDX-FileCopyrightText: 2025 - 2026 Thales Cloud Sécurisé
#
# SPDX-License-Identifier: MIT

[package]
name        = "yb"
version     = "0.4.2"
edition     = "2021"
rust-version = "1.86"
license     = "MIT"
description = "Secure blob storage on a YubiKey"
repository  = "https://github.com/douzebis/yb"
homepage    = "https://github.com/douzebis/yb"
readme      = "../../README.md"
keywords    = ["yubikey", "piv", "encryption", "security"]
categories  = ["command-line-utilities", "cryptography"]

[[bin]]
name = "yb"
path = "src/main.rs"

[[bin]]
name = "yb-gen-man"
path = "src/gen_man.rs"

[lib]
name = "yb"
path = "src/lib.rs"

[features]
self-test = ["yb-core/test-utils"]

[dependencies]
yb-core       = { path = "../yb-core", version = "0.4.2", features = ["chrono", "virtual-piv"] }
p256          = { version = "0.13", features = ["ecdsa"] }
sha2          = "0.10"
clap          = { version = "4", features = ["derive", "env"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
crossterm     = "0.27"
anyhow        = "1"
chrono        = "0.4"
globset       = "0.4"
tempfile      = "3"
rpassword     = "7"
atty          = "0.2"
clap_mangen   = "0.2"
[dev-dependencies]
yb-core  = { path = "../yb-core", version = "0.4.2", features = ["chrono", "virtual-piv"] }
tempfile = "3"


